added api method

--- a/templates/stuff/index.html
+++ b/templates/stuff/index.html
@@ -66,6 +66,7 @@
             </div>
         </div>
     </div>
-    <button class="btn-list">Display a list</button>
+    <button type="submit" class="btn-get-list">Display a list</button>
+    <button type="submit" class="btn-get-one" p_id="{{ student.id }}">Display a person</button>
 
 {% endblock %}
