--- a/templates/stuff/index.html
+++ b/templates/stuff/index.html
@@ -18,6 +18,7 @@
                             {{ student.contact }}
                             {{ student.birthday }}
                             <a href="/student/{{ student.id }}">Details</a>
+                            <button type="submit" class="btn-get-one" p_id="{{ student.id }}" person="student">Display a person</button>
                         </div>
                         {% for subject in subjects %}
                         <div class="inner hidden">
@@ -50,6 +51,7 @@
                             {{ teacher.contact }}
                             {{ teacher.birthday }}
                             <a href="/teacher/{{ teacher.id }}">Details</a>
+                            <button type="submit" class="btn-get-one" p_id="{{ teacher.id }}" person="teacher">Display a person</button>
                         </div>
                         {% for subject in subjects %}
                         <div class="inner hidden">
@@ -66,7 +68,7 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="btn-get-list">Display a list</button>
-    <button type="submit" class="btn-get-one" p_id="{{ student.id }}">Display a person</button>
+    <button type="submit" class="btn-get-list" person="student">Display a list of students</button>
+    <button type="submit" class="btn-get-list" person="teacher">Display a list of teachers</button>
 
 {% endblock %}
