--- a/templates/stuff/index.html
+++ b/templates/stuff/index.html
@@ -70,5 +70,18 @@
     </div>
     <button type="submit" class="btn-get-list" person="student">Display a list of students</button>
     <button type="submit" class="btn-get-list" person="teacher">Display a list of teachers</button>
+    <button type="submit" id="btn-modal trigger">Modal window</button>
+
+    <div class="container modalBack">
+        <div class=" row modalActive">
+            <div class="modalClose">
+                <img src="{% static 'images/icon-cross.png' %}" />
+            </div>
+            <div class="one-half column modalWindow">
+                <h3 style="margin-top: 10%;">Lorem ipsum dolor sit amet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit ratione hic harum doloremque, nemo atque maiores ducimus! Consequuntur autem dolorem, quos aspernatur blanditiis harum. Ut harum temporibus unde ab!</p>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
