--- a/templates/stuff/base.html
+++ b/templates/stuff/base.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
 
 </head>
-<body>
+<body class="inactive">
 
     <!-- Primary Page Layout –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
