--- a/templates/stuff/index.html
+++ b/templates/stuff/index.html
@@ -11,24 +11,17 @@
                 <h4>Студенты</h4>
                 <div>
                 {% for student in students %}
-                <div class="person btn-modal-open" person="student" person_id="{{ student.id }}">
-                    <div class="outer">
-                        {{ student.first_name }}
-                        {{ student.last_name }}
-                        {{ student.contact }}
-                        {{ student.birthday }}
+                <div>
+                    <div class="">
+                        <div class="btn-modal-open" person="student" person_id="{{ student.id }}">
+                            {{ student.first_name }}
+                            {{ student.last_name }}
+                            {{ student.contact }}
+                            {{ student.birthday }}
+                        </div>
                         <a href="/student/{{ student.id }}">Details</a>
                         <button type="submit" class="btn-get-one" p_id="{{ student.id }}" person="student">Display a person</button>
                     </div>
-                    {% for subject in subjects %}
-                    <div class="inner hidden">
-                        {% if subject.student.id == student.id  %}
-                            {{ subject.teacher }}
-                            {{ subject.subject }}
-                            {{ subject.paid_classes }}
-                        {% endif %}
-                    </div>
-                    {% endfor %}
                 </div>
                 {% endfor %}
                 </div>
@@ -44,24 +37,17 @@
                 <h4>Учителя</h4>
                 <div>
                 {% for teacher in teachers %}
-                <div class="person btn-modal-open" person="teacher" person_id="{{ teacher.id }}">
-                    <div class="outer">
-                        {{ teacher.first_name }}
-                        {{ teacher.last_name }}
-                        {{ teacher.contact }}
-                        {{ teacher.birthday }}
+                <div>
+                    <div class="">
+                        <div class="btn-modal-open" person="teacher" person_id="{{ teacher.id }}">
+                            {{ teacher.first_name }}
+                            {{ teacher.last_name }}
+                            {{ teacher.contact }}
+                            {{ teacher.birthday }}
+                        </div>
                         <a href="/teacher/{{ teacher.id }}">Details</a>
                         <button type="submit" class="btn-get-one" p_id="{{ teacher.id }}" person="teacher">Display a person</button>
                     </div>
-                    {% for subject in subjects %}
-                    <div class="inner hidden">
-                        {% if subject.teacher.id == teacher.id  %}
-                            {{ subject.student }}
-                            {{ subject.subject }}
-                            {{ subject.paid_classes }}
-                        {% endif %}
-                    </div>
-                    {% endfor %}
                 </div>
                 {% endfor %}
                 </div>
@@ -70,6 +56,7 @@
     </div>
     <button type="submit" class="btn-get-list" person="student">Display a list of students</button>
     <button type="submit" class="btn-get-list" person="teacher">Display a list of teachers</button>
+    <button class="btn-get-one">get one</button>
 
     <!-- Modal window section -->
     <div class="container modalBack">
@@ -77,51 +64,7 @@
             <div class="modalClose">
                 <img src="{% static 'images/icon-cross.png' %}" />
             </div>
-            <div class="one-half column modalWindow">
-                <h3 style="margin-top: 10%;">Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi odit ratione hic harum doloremque, nemo atque 
-                    maiores ducimus! Consequuntur autem dolorem, quos aspernatur blanditiis harum. Ut harum temporibus unde ab!</p>
-
-                <!-- Person details block -->
-                <h4 person="atudent" class="hidden">Данные ученика</h4>
-                {% for student in students %}
-                <div person="student" person_id="{{ student.id }}" class="hidden">
-                    {{ student.first_name }}
-                    {{ student.last_name }}
-                    {{ student.contact }}
-                    {{ student.birthday }}
-                    {% for subject in subjects %}
-                    <div>
-                        {% if subject.student.id == student.id  %}
-                            {{ subject.teacher }}
-                            {{ subject.subject }}
-                            {{ subject.paid_classes }}
-                        {% endif %}
-                    </div>
-                    {% endfor %}
-                </div>
-                {% endfor %}
-
-                <!-- Teacher details block -->
-                <h4 person="teacher" class="hidden">Данные преподавателя</h4>
-                {% for teacher in teachers %}
-                <div person="teacher" person_id="{{ teacher.id }}" class="hidden">
-                    {{ teacher.first_name }}
-                    {{ teacher.last_name }}
-                    {{ teacher.contact }}
-                    {{ teacher.birthday }}
-                    {% for subject in subjects %}
-                    <div>
-                        {% if subject.teacher.id == teacher.id  %}
-                            {{ subject.student }}
-                            {{ subject.subject }}
-                            {{ subject.paid_classes }}
-                        {% endif %}
-                    </div>
-                    {% endfor %}
-                </div>
-                {% endfor %}
-            </div>
+            <div class="one-half column modalWindow"></div>
         </div>
     </div>
 
