--- a/templates/stuff/index.html
+++ b/templates/stuff/index.html
@@ -29,6 +29,7 @@
         </div>
     </div>
     <br>
+    <!-- End of students list -->
 
     <!-- Teachers list -->
     <div class="container">
@@ -57,6 +58,57 @@
     <button type="submit" class="btn-get-list" person="student">Display a list of students</button>
     <button type="submit" class="btn-get-list" person="teacher">Display a list of teachers</button>
     <button class="btn-get-one">get one</button>
+    <!-- End of teachers list -->
+
+    <!-- Birthdays this week-->
+    <div class="container">
+        <div class="row">
+            <div class="one-half column">
+                <h4>Birthdays this week</h4>
+                <div>
+                {% for student in coming_birthdays_this_week %}
+                <div>
+                    <div class="">
+                        <div class="btn-modal-open" person="student" person_id="{{ student.id }}">
+                            {{ student.first_name }}
+                            {{ student.last_name }}
+                            {{ student.contact }}
+                            {{ student.birthday }}
+                        </div>
+                        <a href="/student/{{ student.id }}">Details</a>
+                        <button type="submit" class="btn-get-one" p_id="{{ student.id }}" person="student">Display a person</button>
+                    </div>
+                </div>
+                {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Birthdays next week -->
+    <div class="container">
+        <div class="row">
+            <div class="one-half column">
+                <h4>Birthdays next week</h4>
+                <div>
+                {% for student in coming_birthdays_next_week %}
+                <div>
+                    <div class="">
+                        <div class="btn-modal-open" person="student" person_id="{{ student.id }}">
+                            {{ student.first_name }}
+                            {{ student.last_name }}
+                            {{ student.contact }}
+                            {{ student.birthday }}
+                        </div>
+                        <a href="/student/{{ student.id }}">Details</a>
+                        <button type="submit" class="btn-get-one" p_id="{{ student.id }}" person="student">Display a person</button>
+                    </div>
+                </div>
+                {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of birthdays list -->
 
     <!-- Modal window section -->
     <div class="container modalBack">
