--- a/templates/stuff/teacher.html
+++ b/templates/stuff/teacher.html
@@ -4,6 +4,8 @@
 
 {% block content-block %}
 
+    <a href="{% url 'index' %}">На главную</a>
+
     <div class="container">
         <div class="row">
             <div class="nine columns">
