--- a/templates/stuff/login.html
+++ b/templates/stuff/login.html
@@ -4,17 +4,23 @@
 
 {% block content-block %}
 
-    <h1>Login to Stuff Portal Savanna ABC</h1>
+    <div class="container">
+        <div class="row">
+            <div class="one-half column">
+                <h1>Login to Stuff Portal Savanna ABC</h1>
 
-    <form id="login_form" method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        Username: <input type="text" name="username" value="" size="50" />
-        <br />
-        Password: <input type="password" name="password" value="" size="50" />
-        <br />
-        <input type="hidden" name="next" value="{{ next }}">
+                <form id="login_form" method="post" action="{% url 'login' %}">
+                    {% csrf_token %}
+                    Username: <input type="text" name="username" value="" size="50" />
+                    <br />
+                    Password: <input type="password" name="password" value="" size="50" />
+                    <br />
+                    <input type="hidden" name="next" value="{{ next }}">
 
-        <input type="submit" value="submit" />
-    </form>
+                    <input type="submit" value="submit" />
+                </form>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
