--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -19,6 +19,8 @@
 
                     <input type="submit" value="submit" />
                 </form>
+
+                <a href="{% url "password_reset" %}">Forgot your password?</a>
             </div>
         </div>
     </div>
