--- a/templates/stuff/base.html
+++ b/templates/stuff/base.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-{% load static %}
+<html lang="ru">
 <head>
 
-    <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta charset="utf-8">
+    {% load static %}
+    <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Title -->
     <title>{% block title %}Savanna{% endblock %}</title>
+
+    <!-- Author and description -->
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
     <!-- FONT –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-    <!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
-    <link rel="stylesheet" href="{% static 'css/skeleton.css' %}">
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
     <!-- Favicon –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
@@ -26,36 +29,62 @@
 </head>
 <body>
 
-    <!-- Username/Login/Logout header -->
-
-    {% block profile-header-block %}
-    <div class="">
-        <div class="row">
-            <div class="three columns u-pull-right">
-                {% if user.is_authenticated %}
-                    <span>Hello, {{ user.username }}</span>
-                    <a href="{% url 'logout' next=request.path %}">Logout</a>
-                    <a href="{% url 'password_change' %}">Change password</a>
-                {% endif %}
+    <!-- Header section -->
+    <div class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="{% url 'index' %}" class="navbar-brand">Stuff Savanna ABC</a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" targer="#bs-navbar-collapse" aria-expanded="false">
+                    <span class="sr-only">Toggle Navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Link template</a></li>
+                    <li><a href="#">Link template</a></li>
+                    <li><a href="#">Link template</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <p class="navbar-text">Hello, {username}</p>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-user"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown-header"><span class="glyphicon glyphicon-user"></span> Profile menu</li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-menu-right"></span> Link template</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-menu-right"></span> Link template</a></li>
+                            <li class="divider" role="separator"></li>
+                            <li><a href="{% url 'password_change' %}"><span class="glyphicon glyphicon-refresh"></span> Change password</a></li>
+                            <li><a href="{% url 'logout' next=request.path %}"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
-    {% endblock %}
 
-    <!-- Primary Page Layout –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- Content section -->
+    {% block content-block %}{% endblock %}
 
-    <div class="container">
-        <div class="row">
-        <div class="one-half column" style="margin-top: 10%"></div>
+    <!-- Footer section -->
+    <div class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <p class="navbar-text navbar-right">Developed by nihither</p>
         </div>
     </div>
 
-    <!-- Content Main Block -->
-
-    {% block content-block %}{% endblock %}
-
-    <!-- End Document –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- scripts links -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="{% static 'js/jquery-3.7.0.js' %}"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
     <script src="{% static 'js/custom.js' %}"></script>
+
 </body>
 </html>
