--- a/templates/accounts/password_reset_complete.html
+++ b/templates/accounts/password_reset_complete.html
@@ -6,9 +6,9 @@
 
 <div class="container">
     <div class="row">
-        <div class="nine columns">
+        <div class="col-md-5">
             <h1>Password set</h1>
-            <p>Your password has been set. You can <a href="{% url "login" %}">log in now</a></p>
+            <p>Your password has been set. You can <a href="{% url 'login' %}">log in now</a></p>
         </div>
     </div>
 </div>
