--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="nine columns">
+        <div class="col-md-5">
                 <h1>Reset your password</h1>
                 <p>We've emailed you instructions for setting your password.</p>
                 <p>If you don't receive an email, please make sure you've entered the address you registered with.</p>
