--- a/templates/accounts/password_reset.html
+++ b/templates/accounts/password_reset.html
@@ -6,13 +6,22 @@
 
 <div class="container">
     <div class="row">
-        <div class="nine columns">
+        <div class="col-md-5">
             <h1>Forgot your password?</h1>
+
             <p>Enter your e-mail address to obtain a new password.</p>
-            <form action="." method="post">
-                {{ form.as_p }}
-                <p><input type="submit" value="Send e-mail"></p>
+
+            <form method="post" action=".">
                 {% csrf_token %}
+                
+                {% for field in form %}
+                <div class="form-group">
+                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    {{ field }}
+                </div>
+                {% endfor %}
+
+                <button type="submit" class="btn btn-default" value="Send email">Send email</button>
             </form>
         </div>
     </div>
