--- a/templates/accounts/password_reset_confirm.html
+++ b/templates/accounts/password_reset_confirm.html
@@ -6,21 +6,35 @@
 
 <div class="container">
     <div class="row">
-        <div class="nine columns">
+        <div class="col-md-5">
             <h1>Reset your password</h1>
             {% if validlink %}
+
                 <p>Please enter your new password twice:</p>
+
                 <form action="." method="post">
-                    {{ form.as_p }}
                     {% csrf_token %}
-                    <p><input type="submit" value="Change my password"/></p>
+
+                    {% for field in form %}
+                        <div class="form-group">
+                            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                            {{ field }}
+                            {% if field.help_text %}
+                                {{ field.help_text }}
+                            {% endif %}
+                        </div>
+                    {% endfor %}
+
+                    <button class="btn btn-default">Set password</button>
                 </form>
             {% else %}
+
                 <p>The password reset link was invalid, possibly because it has
                     already been used. Please request a new password reset.</p>
+
             {% endif %}
         </div>
     </div>
 </div>
-    
+
 {% endblock %}
