--- a/templates/stuff/base.html
+++ b/templates/stuff/base.html
@@ -43,11 +43,11 @@
             </div>
             {% if user.is_authenticated %}
             <div class="collapse navbar-collapse" id="bs-navbar-collapse">
-                <ul class="nav navbar-nav">
+                <!-- <ul class="nav navbar-nav">
                     <li><a href="#">Link template</a></li>
                     <li><a href="#">Link template</a></li>
                     <li><a href="#">Link template</a></li>
-                </ul>
+                </ul> -->
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <p class="navbar-text">Hello, {{ user.username }}</p>
@@ -58,9 +58,9 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-header"><span class="glyphicon glyphicon-user"></span> Profile menu</li>
-                            <li role="separator" class="divider"></li>
+                            <!-- <li role="separator" class="divider"></li>
                             <li><a href="#"><span class="glyphicon glyphicon-menu-right"></span> Link template</a></li>
-                            <li><a href="#"><span class="glyphicon glyphicon-menu-right"></span> Link template</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-menu-right"></span> Link template</a></li> -->
                             <li class="divider" role="separator"></li>
                             <li><a href="{% url 'password_change' %}"><span class="glyphicon glyphicon-refresh"></span> Change password</a></li>
                             <li><a href="{% url 'logout' next=request.path %}"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
