--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,18 @@
 body {
-  padding-bottom: 70px;
+  padding-bottom: 0px;
+}
+
+#sidebar {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 95%;
+  z-index: 5;
+}
+
+#main-navbar {
+  z-index: 10;
 }
 
 /* Modal window section */
