change index page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,87 +2,7 @@ body {
   padding-bottom: 0px;
 }
 
-#sidebar {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  bottom: 0px;
-  right: 95%;
-  z-index: 5;
+.person_list {
+  height: 460px;
+  overflow-y: auto;
 }
-
-#main-navbar {
-  z-index: 10;
-}
-
-/* Modal window section */
-
-.modalBack {
-    display: none;
-    z-index: 1;
-    position: fixed;
-    top: 5px;
-    left: 50%;
-    bottom: 5px;
-    right: 0px;
-    background-color: lightgrey;
-    border-radius: 10px;
-}
-
-.modalActive {
-    position: relative;
-    display: block;
-    margin: 10px;
-}
-
-.modalClose {
-    position: fixed;
-    top: 15px;
-    right: 15px;
-}
-
-.modalWindow {
-    margin-top: 10%;
-}
-
-/* End of modal window */
-
-/* Calendar section */
-
-/* .calendar {
-    width: 98%;
-    margin: auto;
-    font-size: 13px;
-  }
-  
-  .calendar tr, .calendar td {
-    border: 1px solid black;
-  }
-  
-  .calendar th {
-    padding: 10px;
-    text-align: center;
-    font-size: 18px;
-  }
-  
-  .calendar td {
-    width: 200px;
-    min-height: 50px;
-    padding: 20px 0px 0px 5px;
-    vertical-align: top;
-  }
-  
-  .month {
-    font-size: 25px;
-  }
-  
-  .date {
-    font-size: 16px;
-  }
-  
-  ul {
-    height: 100%;
-    padding: 0px 5px 0px 20px;
-  } */
-
-/* End of Calendar section */
