--- a/templates/stuff/base.html
+++ b/templates/stuff/base.html
@@ -17,7 +17,7 @@
 
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="{% static 'css/normalize.css' %}"> -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
     <!-- FONT –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="navbar-header">
                 <a href="{% url 'index' %}" class="navbar-brand">Stuff Savanna ABC</a>
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" targer="#bs-navbar-collapse" aria-expanded="false">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle Navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -42,7 +42,7 @@
                 </button>
             </div>
             {% if user.is_authenticated %}
-            <div class="collapse navbar-collapse" id="bs-navbar-collapse">
+            <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
                 <!-- <ul class="nav navbar-nav">
                     <li><a href="#">Link template</a></li>
                     <li><a href="#">Link template</a></li>
@@ -72,11 +72,6 @@
         </div>
     </div>
 
-    <!-- Sidebar section -->
-    <!-- <div class="navbar-inverse" id="sidebar">
-
-    </div> -->
-
     <!-- Content section -->
     {% block content-block %}{% endblock %}
 
@@ -90,7 +85,7 @@
     <!-- scripts links -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- <script src="{% static 'js/jquery-3.7.0.js' %}"></script> -->
-    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- <script src="{% static 'js/custom.js' %}"></script> -->
 
 </body>
