add schedule per day

--- a/templates/stuff/teacher.html
+++ b/templates/stuff/teacher.html
@@ -11,8 +11,13 @@
     </div>
 
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-5">
             {{ calendar }}
+        </div>
+
+        <div class="col-md-7">
+            <h3>Расписание на день <small>Выберите день</small></h3>
+            <div id="classes_per_day"></div>
         </div>
     </div>
 </div>
