--- a/templates/stuff/base.html
+++ b/templates/stuff/base.html
@@ -86,7 +86,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- <script src="{% static 'js/jquery-3.7.0.js' %}"></script> -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- <script src="{% static 'js/custom.js' %}"></script> -->
+    <script src="{% static 'js/custom.js' %}"></script>
 
 </body>
 </html>
